--- a/index.html
+++ b/index.html
@@ -6,24 +6,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./CSS/Style.css">
 </head>
 
 <body>
-    <h4>
-        <em>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit eius veritatis non
-            veniam beatae eum odit soluta doloribus provident exercitationem, ad impedit dolorem qui
-            nemo aliquid atque at. Doloribus non vitae est accusamus unde. Ullam accusamus architecto ipsum
-            explicabo aliquid eaque fugit debitis id excepturi fugiat numquam ad facere nam modi reiciendis, harum
-            molestias optio minima aspernatur sint, dolorum corporis exercitationem eos! Dignissimos, accusamus ab!
-            Dicta,
-            placeat! Non a sequi modi dolor excepturi nostrum, ipsum ratione necessitatibus quis exercitationem.
-            Quibusdam,
-            corrupti! Est ex adipisci corporis laborum officia incidunt sunt veniam quae voluptates voluptate! Repellat
-            fugiat
-            quibusdam doloremque cum recusandae voluptatum!
-        </em>
-    </h4>
+    <!-- Navigation-->
+    <header>
+
+        <nav class="container">
+
+            <h1 class="nav-logo"><span>smg</span>projects</h1>
+            <ul>
+                <li>
+                    <a href="#">HOME</a>
+
+                </li>
+                <li>
+                    <a href="#">ABOUT</a>
+
+                </li>
+                <li>
+                    <a href="#">SKILLS</a>
+
+                </li>
+                <li>
+                    <a href="#">EDUCATION</a>
+                </li>
+                <li>
+                    <a href="#">CONTACT</a>
+                </li>
+            </ul>
+        </nav>
+
+    </header><!--Navigation end-->
+
+    <!--main-->
+    <main class="container">
+    </main><!--main end-->
+
+    <footer> </footer>
+
+
+
+
+
 </body>
 
 </html>
