--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./CSS/Style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 
 <body>
@@ -18,25 +19,25 @@
 
         <nav class="container">
 
-            <h1 class="nav-logo"><span>smg</span>projects</h1>
+            <h1 class="nav-logo"><span>SG</span>Projects</h1>
             <ul>
                 <li>
-                    <a href="#">HOME</a>
+                    <a href="#">Home</a>
 
                 </li>
                 <li>
-                    <a href="#">ABOUT</a>
+                    <a href="#">About</a>
 
                 </li>
                 <li>
-                    <a href="#">SKILLS</a>
+                    <a href="#">Skills</a>
 
                 </li>
                 <li>
-                    <a href="#">EDUCATION</a>
+                    <a href="#">Education</a>
                 </li>
                 <li>
-                    <a href="#">CONTACT</a>
+                    <a href="#">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -44,7 +45,38 @@
     </header><!--Navigation end-->
 
     <!--main-->
-    <main class="container">
+    <main>
+        <section class="hero">
+            <div class="container">
+                <div class="content">
+                    <h1>Hey,I am
+                        <span>Sarita Gawai</span>
+                    </h1>
+                    <div>
+                        <div class="btn-wrapper">
+                            <a class="btn btn-primary">
+                                About Me
+                                <i class="bi bi-arrow-up-right-circle"></i>
+                            </a>
+                            <a class="btn btn-secondary">
+                                Contact Me
+                            </a>
+                        </div>
+                    </div>
+                    <ul class="icon-wrapper">
+                        <li><a href="#"><i class="bi bi-instagram"></i></a></li>
+                        <li><a href="#"><i class="bi bi-facebook"></i></a></li>
+                        <li><a href="#"><i class="bi bi-github"></i></a></li>
+                        <li><a href="#"><i class="bi bi-twitter"></i></a></li>
+                        <li><a href="#"><i class="bi bi-linkedin"></i></a></li>
+                    </ul>
+                </div>
+
+                <div class="image">
+                    <img src="https:/source.unsplash.com/random/200*200">
+                </div>
+            </div>
+        </section>
     </main><!--main end-->
 
     <footer> </footer>
