--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
                 </li>
                 <li>
-                    <a href="#">About</a>
+                    <a href="#about">About</a>
 
                 </li>
                 <li>
@@ -77,7 +77,69 @@
                 </div>
             </div>
         </section>
+
     </main><!--main end-->
+    <section class="about" id="about">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae quam odit ex voluptate hic in, cum saepe
+            ullam praesentium, quas recusandae modi unde eaque velit mollitia et. Culpa quia magnam architecto. Rerum
+            atque reprehenderit inventore dolor quae? Praesentium voluptatum nulla at asperiores enim sequi laudantium
+            ut nemo magni voluptatem officia voluptates reprehenderit consectetur, velit dolorem atque distinctio a,
+            corrupti aspernatur! Ex sequi labore aut rerum. Repellat non perspiciatis porro, sunt et optio neque nam
+            dolorem dolore. Porro explicabo quisquam nisi qui minima! Corporis vel id odit tenetur earum quaerat
+            assumenda repudiandae, ab eos doloremque modi, adipisci nulla quas non sapiente.</p>
+        <div class="container">
+            <div class="content">
+                <div class="image">
+                    <img src="https:/source.unsplash.com/random/">
+                </div>
+                <h2 class="heading">
+                    About <span>me</span>
+                </h2>
+                <p>
+
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque tempore aliquid veritatis, repellat
+                    eaque maiores atque dolore blanditiis. Perferendis illum explicabo adipisci saepe possimus omnis
+                    mollitia magnam cum quisquam in nulla praesentium maiores quaerat distinctio veniam blanditiis a ut
+                    debitis repellendus, ipsam officia enim. Quaerat beatae illo deserunt quidem. Omnis facilis
+                    assumenda dolorem ducimus quasi? Ipsam totam beatae illum? Officiis soluta accusamus dolore
+                    perspiciatis! Quas veniam nesciunt error animi veritatis repudiandae laboriosam pariatur fugiat quos
+                    molestiae porro nobis, placeat ea rerum cupiditate quo dolore voluptas cumque mollitia totam nulla
+                    modi accusamus fuga. Corrupti vero veniam consequuntur rem non excepturi soluta?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum reprehenderit, fugiat saepe cum
+                    voluptatem, et, fugit quas porro maxime molestiae maiores. Earum soluta dolor minus eaque dolores
+                    porro, similique reiciendis modi natus, quia quod, ad iusto adipisci aperiam culpa maiores vitae
+                    accusamus. Reiciendis pariatur veniam dolor consequatur distinctio eaque ullam exercitationem,
+                    perspiciatis alias deleniti sunt consectetur. Asperiores, atque nisi beatae quod excepturi molestias
+                    officia odit blanditiis! Fugit, beatae debitis. Eaque doloremque, facilis voluptate autem aspernatur
+                    repudiandae obcaecati totam laborum magnam vitae labore deserunt enim officia aliquid quae illum
+                    similique, eius esse, nostrum adipisci. Ducimus accusamus quam fugiat tenetur aliquam quaerat.
+
+                </p>
+            </div>
+        </div>
+
+
+    </section>
+    <section class="skills-wrapper" id="skills">
+        <div class="container">
+            <center>
+                <h2 class="heading-2">
+                    My <span>Skills</span>
+                </h2>
+                <div class="skills">
+                    <span>PHP</span>
+                    <i class="bi bi-circle-fill"></i>
+                    <span>Python</span>
+                    <i class="bi bi-circle-fill"></i>
+                    <span>Django</span>
+                    <i class="bi bi-circle-fill"></i>
+                    <span>Django</span>
+                    <i class="bi bi-circle-fill"></i>
+                    <span>Django</span>
+                </div>
+            </center>
+        </div>
+    </section>
 
     <footer> </footer>
 
